# asg

./: .gitignore  CMakeLists.txt
buildsys/: FindSOCI.cmake
src/lib/: CMakeLists.txt
src/lib/asg/: CMakeLists.txt
src/lib/asg/kernel/: CMakeLists.txt  abstract_node.cpp  abstract_node.h  asg.cpp  asg.h  node.cpp  node.h  node_id.cpp  node_id.h  node_id_factory.cpp  node_id_factory.h  node_name.cpp  node_name.h  root_node.cpp  root_node.h  types.h
src/lib/asg/modeling/: CMakeLists.txt  project.cpp  project.h  project_fragment.cpp  project_fragment.h
src/lib/asg/object_model/: CMakeLists.txt  data_type.cpp  data_type.h  model.cpp  model.h  model_fragment.cpp  model_fragment.h
src/lib/asg/relational_model/: CMakeLists.txt  data_type.cpp  data_type.h  model.cpp  model.h  model_fragment.cpp  model_fragment.h
src/test/asg/: CMakeLists.txt
src/test/asg/kernel/: CMakeLists.txt  test_kernel.cpp  test_node.cpp  test_node_id.cpp  test_node_id_factory.cpp  test_node_name.cpp  test_root_node.cpp
src/test/asg/modeling/: CMakeLists.txt  test_project.cpp
src/test/asg/object_model/: CMakeLists.txt  project_config.h  project_factory.cpp  project_factory.h  test_project.cpp
src/test/asg/relational_model/: CMakeLists.txt  project_config.h  project_factory.cpp  project_factory.h  test_project.cpp
templates/: LICENSE.txt
